--- a/docs/blog/posts/2025.md
+++ b/docs/blog/posts/2025.md
@@ -1,11 +1,11 @@
 ---
 date: 2025-06-03
 authors: [Wcowin]
-title: MkDocs AI 摘要更新日志
+title: MkDocs reading time更新日志
 categories:
   - 更新日志
 tags:
-  - MkDocs AI 摘要
+  - MkDocs reading time
 hide_reading_time: true
 ---
 # Blog
